parserBison.output
State 35 conflicts: 4 shift/reduce
State 51 conflicts: 1 shift/reduce
State 62 conflicts: 1 shift/reduce
State 158 conflicts: 1 shift/reduce
State 274 conflicts: 1 reduce/reduce
State 433 conflicts: 1 reduce/reduce
State 550 conflicts: 3 reduce/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | '(' error ')'
    6                   | _GENERIC_selection

    7 constant: INTEGER_CONSTANT
    8         | FLOATING_CONSTANT
    9         | ENUMERATION_CONSTANT

   10 enumeration_constant: IDENTIFIER

   11 string: STRING_LITERAL
   12       | FUNC_NAME

   13 _GENERIC_selection: _GENERIC '(' assignment_expression ',' _GENERIC_assoc_list ')'

   14 _GENERIC_assoc_list: _GENERIC_association
   15                    | _GENERIC_assoc_list ',' _GENERIC_association

   16 _GENERIC_association: type_name ':' assignment_expression
   17                     | DEFAULT ':' assignment_expression

   18 postfix_expression: primary_expression
   19                   | postfix_expression '[' expression ']'
   20                   | postfix_expression '(' ')'
   21                   | postfix_expression '(' argument_expression_list ')'
   22                   | postfix_expression '.' IDENTIFIER
   23                   | postfix_expression PTR_OP IDENTIFIER
   24                   | postfix_expression INC_OP
   25                   | postfix_expression DEC_OP
   26                   | '(' type_name ')' '{' initializer_list '}'
   27                   | '(' type_name ')' '{' initializer_list ',' '}'

   28 argument_expression_list: assignment_expression
   29                         | argument_expression_list ',' assignment_expression
   30                         | error ','

   31 unary_expression: postfix_expression
   32                 | INC_OP unary_expression
   33                 | DEC_OP unary_expression
   34                 | unary_operator cast_expression
   35                 | SIZEOF unary_expression
   36                 | SIZEOF '(' type_name ')'
   37                 | _ALIGNOF '(' type_name ')'

   38 unary_operator: '&'
   39               | '*'
   40               | '+'
   41               | '-'
   42               | '~'
   43               | '!'

   44 cast_expression: unary_expression
   45                | '(' type_name ')' cast_expression

   46 multiplicative_expression: cast_expression
   47                          | multiplicative_expression '*' cast_expression
   48                          | multiplicative_expression '/' cast_expression
   49                          | multiplicative_expression '%' cast_expression

   50 additive_expression: multiplicative_expression
   51                    | additive_expression '+' multiplicative_expression
   52                    | additive_expression '-' multiplicative_expression
   53                    | error multiplicative_expression

   54 shift_expression: additive_expression
   55                 | shift_expression LEFT_OP additive_expression
   56                 | shift_expression RIGHT_OP additive_expression

   57 relational_expression: shift_expression
   58                      | relational_expression '<' shift_expression
   59                      | relational_expression '>' shift_expression
   60                      | relational_expression LE_OP shift_expression
   61                      | relational_expression GE_OP shift_expression
   62                      | error '<' shift_expression
   63                      | error '>' shift_expression
   64                      | error LE_OP shift_expression
   65                      | error GE_OP shift_expression

   66 equality_expression: relational_expression
   67                    | equality_expression EQ_OP relational_expression
   68                    | equality_expression NE_OP relational_expression
   69                    | error EQ_OP relational_expression
   70                    | error NE_OP relational_expression

   71 and_expression: equality_expression
   72               | and_expression '&' equality_expression

   73 exclusive_or_expression: and_expression
   74                        | exclusive_or_expression '^' and_expression

   75 inclusive_or_expression: exclusive_or_expression
   76                        | inclusive_or_expression '|' exclusive_or_expression

   77 logical_and_expression: inclusive_or_expression
   78                       | logical_and_expression AND_OP inclusive_or_expression

   79 logical_or_expression: logical_and_expression
   80                      | logical_or_expression OR_OP logical_and_expression

   81 conditional_expression: logical_or_expression
   82                       | logical_or_expression '?' expression ':' conditional_expression
   83                       | error '?' error ':' conditional_expression
   84                       | logical_or_expression '?' error ':' conditional_expression
   85                       | error '?' expression ':' conditional_expression

   86 assignment_expression: conditional_expression
   87                      | unary_expression assignment_operator assignment_expression
   88                      | error ';'

   89 assignment_operator: '='
   90                    | MUL_ASSIGN
   91                    | DIV_ASSIGN
   92                    | MOD_ASSIGN
   93                    | ADD_ASSIGN
   94                    | SUB_ASSIGN
   95                    | LEFT_ASSIGN
   96                    | RIGHT_ASSIGN
   97                    | AND_ASSIGN
   98                    | XOR_ASSIGN
   99                    | OR_ASSIGN

  100 expression: assignment_expression
  101           | expression ',' assignment_expression

  102 constant_expression: conditional_expression

  103 declaration: declaration_specifiers ';'

  104 $@1: ε

  105 declaration: declaration_specifiers $@1 init_declarator_list ';'
  106            | _STATIC_ASSERT_declaration
  107            | declaration_specifiers error ';'

  108 declaration_specifiers: storage_class_specifier declaration_specifiers
  109                       | storage_class_specifier
  110                       | type_specifier declaration_specifiers
  111                       | type_specifier
  112                       | type_qualifier declaration_specifiers
  113                       | type_qualifier
  114                       | function_specifier declaration_specifiers
  115                       | function_specifier
  116                       | alignment_specifier declaration_specifiers
  117                       | alignment_specifier

  118 init_declarator_list: init_declarator
  119                     | init_declarator_list ',' init_declarator
  120                     | error ',' init_declarator

  121 init_declarator: declarator '=' initializer
  122                | declarator
  123                | error '=' initializer

  124 storage_class_specifier: TYPEDEF
  125                        | EXTERN
  126                        | STATIC
  127                        | _THREAD_LOCAL
  128                        | AUTO
  129                        | REGISTER

  130 type_specifier: VOID
  131               | CHAR
  132               | SHORT
  133               | INT
  134               | LONG
  135               | FLOAT
  136               | DOUBLE
  137               | SIGNED
  138               | UNSIGNED
  139               | _BOOL
  140               | _COMPLEX
  141               | _IMAGINARY
  142               | struct_or_union_specifier
  143               | enum_specifier
  144               | TYPEDEF_NAME

  145 struct_or_union_specifier: struct_or_union prepare_scope '{' struct_declaration_list '}' finish_scope
  146                          | struct_or_union IDENTIFIER prepare_scope '{' struct_declaration_list '}' finish_scope
  147                          | struct_or_union IDENTIFIER
  148                          | struct_or_union IDENTIFIER prepare_scope '{' error '}' finish_scope
  149                          | struct_or_union prepare_scope '{' error '}' finish_scope

  150 struct_or_union: STRUCT
  151                | UNION

  152 struct_declaration_list: struct_declaration
  153                        | struct_declaration_list struct_declaration

  154 struct_declaration: specifier_qualifier_list ';'
  155                   | specifier_qualifier_list struct_declarator_list ';'
  156                   | _STATIC_ASSERT_declaration
  157                   | error ';'

  158 specifier_qualifier_list: type_specifier specifier_qualifier_list
  159                         | type_specifier
  160                         | type_qualifier specifier_qualifier_list
  161                         | type_qualifier

  162 struct_declarator_list: struct_declarator
  163                       | struct_declarator_list ',' struct_declarator
  164                       | error ',' struct_declarator

  165 struct_declarator: ':' constant_expression
  166                  | declarator ':' constant_expression
  167                  | declarator
  168                  | error ':' constant_expression

  169 enum_specifier: ENUM '{' enumerator_list '}'
  170               | ENUM '{' enumerator_list ',' '}'
  171               | ENUM IDENTIFIER '{' enumerator_list '}'
  172               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  173               | ENUM IDENTIFIER
  174               | ENUM '{' error '}'
  175               | ENUM IDENTIFIER '{' error '}'

  176 enumerator_list: enumerator
  177                | enumerator_list ',' enumerator
  178                | error ',' enumerator

  179 $@2: ε

  180 enumerator: enumeration_constant '=' $@2 constant_expression
  181           | enumeration_constant
  182           | error '=' constant_expression

  183 type_qualifier: CONST
  184               | RESTRICT
  185               | VOLATILE
  186               | _ATOMIC

  187 function_specifier: INLINE
  188                   | _NORETURN

  189 alignment_specifier: _ALIGNAS '(' type_name ')'
  190                    | _ALIGNAS '(' constant_expression ')'

  191 declarator: pointer direct_declarator
  192           | direct_declarator

  193 direct_declarator: IDENTIFIER
  194                  | '(' declarator ')'
  195                  | direct_declarator '[' ']'
  196                  | direct_declarator '[' '*' ']'
  197                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  198                  | direct_declarator '[' STATIC assignment_expression ']'
  199                  | direct_declarator '[' type_qualifier_list '*' ']'
  200                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  201                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  202                  | direct_declarator '[' type_qualifier_list ']'
  203                  | direct_declarator '[' assignment_expression ']'
  204                  | direct_declarator '(' parameter_type_list ')'
  205                  | direct_declarator '(' ')'
  206                  | direct_declarator '(' identifier_list ')'
  207                  | direct_declarator '(' error ')'
  208                  | '(' error ')'

  209 pointer: '*' type_qualifier_list pointer
  210        | '*' type_qualifier_list
  211        | '*' pointer
  212        | '*'
  213        | '*' error pointer

  214 type_qualifier_list: type_qualifier
  215                    | type_qualifier_list type_qualifier

  216 parameter_type_list: parameter_list ',' ELLIPSIS
  217                    | parameter_list
  218                    | error ',' ELLIPSIS

  219 parameter_list: parameter_declaration
  220               | parameter_list ',' parameter_declaration
  221               | error ',' parameter_declaration

  222 parameter_declaration: declaration_specifiers declarator
  223                      | declaration_specifiers abstract_declarator
  224                      | declaration_specifiers
  225                      | error declarator
  226                      | error abstract_declarator

  227 identifier_list: IDENTIFIER
  228                | identifier_list ',' IDENTIFIER

  229 type_name: specifier_qualifier_list abstract_declarator
  230          | specifier_qualifier_list

  231 abstract_declarator: pointer direct_abstract_declarator
  232                    | pointer
  233                    | direct_abstract_declarator

  234 direct_abstract_declarator: '(' abstract_declarator ')'
  235                           | '[' ']'
  236                           | '[' '*' ']'
  237                           | '[' STATIC type_qualifier_list assignment_expression ']'
  238                           | '[' STATIC assignment_expression ']'
  239                           | '[' type_qualifier_list STATIC assignment_expression ']'
  240                           | '[' type_qualifier_list assignment_expression ']'
  241                           | '[' type_qualifier_list ']'
  242                           | '[' assignment_expression ']'
  243                           | direct_abstract_declarator '[' ']'
  244                           | direct_abstract_declarator '[' '*' ']'
  245                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  246                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  247                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  248                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  249                           | direct_abstract_declarator '[' type_qualifier_list ']'
  250                           | direct_abstract_declarator '[' assignment_expression ']'
  251                           | '(' ')'
  252                           | '(' parameter_type_list ')'
  253                           | direct_abstract_declarator '(' ')'
  254                           | direct_abstract_declarator '(' parameter_type_list ')'
  255                           | '[' error ']'
  256                           | direct_abstract_declarator '(' error ')'
  257                           | direct_abstract_declarator '[' error ']'
  258                           | error ')'

  259 initializer: '{' initializer_list '}'
  260            | '{' initializer_list ',' '}'
  261            | '{' error '}'
  262            | assignment_expression

  263 initializer_list: designation initializer
  264                 | initializer
  265                 | initializer_list ',' designation initializer
  266                 | initializer_list ',' initializer
  267                 | error ',' initializer

  268 designation: designator_list '='

  269 designator_list: designator
  270                | designator_list designator

  271 designator: '[' constant_expression ']'
  272           | '.' IDENTIFIER

  273 _STATIC_ASSERT_declaration: _STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  274 statement: labeled_statement
  275          | compound_statement
  276          | expression_statement
  277          | selection_statement
  278          | iteration_statement
  279          | jump_statement

  280 labeled_statement: IDENTIFIER ':' statement
  281                  | CASE constant_expression ':' statement
  282                  | DEFAULT ':' statement

  283 prepare_scope: ε

  284 finish_scope: ε

  285 compound_statement: prepare_scope '{' '}' finish_scope
  286                   | prepare_scope '{' block_item_list '}' finish_scope
  287                   | prepare_scope '{' error '}' finish_scope

  288 block_item_list: block_item
  289                | block_item_list block_item

  290 block_item: declaration
  291           | statement

  292 expression_statement: ';'
  293                     | expression ';'
  294                     | error ';'

  295 selection_statement: IF '(' expression ')' statement ELSE statement
  296                    | IF '(' expression ')' statement
  297                    | SWITCH '(' expression ')' statement
  298                    | IF '(' error ')' statement
  299                    | SWITCH '(' error ')' statement
  300                    | IF '(' error ')' statement ELSE statement

  301 iteration_statement: WHILE '(' expression ')' statement
  302                    | DO statement WHILE '(' expression ')' ';'
  303                    | FOR prepare_scope '(' expression_statement expression_statement ')' finish_scope statement
  304                    | FOR prepare_scope '(' expression_statement expression_statement expression ')' finish_scope statement
  305                    | FOR prepare_scope '(' declaration expression_statement ')' finish_scope statement
  306                    | FOR prepare_scope '(' declaration expression_statement expression ')' finish_scope statement
  307                    | DO error WHILE '(' expression ')' ';'
  308                    | FOR '(' error ')' statement

  309 jump_statement: GOTO IDENTIFIER ';'
  310               | CONTINUE ';'
  311               | BREAK ';'
  312               | RETURN ';'
  313               | RETURN expression ';'
  314               | RETURN error ';'

  315 translation_unit: prepare_scope external_declaration finish_scope
  316                 | translation_unit external_declaration

  317 external_declaration: function_definition
  318                     | declaration

  319 function_definition: declaration_specifiers declarator declaration_list compound_statement
  320                    | declaration_specifiers declarator compound_statement
  321                    | declaration_specifiers error compound_statement
  322                    | error declaration_list compound_statement
  323                    | error error compound_statement
  324                    | error compound_statement

  325 declaration_list: declaration
  326                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 43
    '%' (37) 49
    '&' (38) 38 72
    '(' (40) 4 5 13 20 21 26 27 36 37 45 189 190 194 204 205 206 207 208 234 251 252 253 254 256 273 295 296 297 298 299 300 301 302 303 304 305 306 307 308
    ')' (41) 4 5 13 20 21 26 27 36 37 45 189 190 194 204 205 206 207 208 234 251 252 253 254 256 258 273 295 296 297 298 299 300 301 302 303 304 305 306 307 308
    '*' (42) 39 47 196 199 209 210 211 212 213 236 244
    '+' (43) 40 51
    ',' (44) 13 15 27 29 30 101 119 120 163 164 170 172 177 178 216 218 220 221 228 260 265 266 267 273
    '-' (45) 41 52
    '.' (46) 22 272
    '/' (47) 48
    ':' (58) 16 17 82 83 84 85 165 166 168 280 281 282
    ';' (59) 88 103 105 107 154 155 157 273 292 293 294 302 307 309 310 311 312 313 314
    '<' (60) 58 62
    '=' (61) 89 121 123 180 182 268
    '>' (62) 59 63
    '?' (63) 82 83 84 85
    '[' (91) 19 195 196 197 198 199 200 201 202 203 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 255 257 271
    ']' (93) 19 195 196 197 198 199 200 201 202 203 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 255 257 271
    '^' (94) 74
    '{' (123) 26 27 145 146 148 149 169 170 171 172 174 175 259 260 261 285 286 287
    '|' (124) 76
    '}' (125) 26 27 145 146 148 149 169 170 171 172 174 175 259 260 261 285 286 287
    '~' (126) 42
    error (256) 5 30 53 62 63 64 65 69 70 83 84 85 88 107 120 123 148 149 157 164 168 174 175 178 182 207 208 213 218 221 225 226 255 256 257 258 261 267 287 294 298 299 300 307 308 314 321 322 323 324
    IDENTIFIER <name> (258) 1 10 22 23 146 147 148 171 172 173 175 193 227 228 272 280 309
    INTEGER_CONSTANT (259) 7
    FLOATING_CONSTANT (260) 8
    STRING_LITERAL (261) 11 273
    FUNC_NAME (262) 12
    SIZEOF (263) 35 36
    PTR_OP (264) 23
    INC_OP (265) 24 32
    DEC_OP (266) 25 33
    LEFT_OP (267) 55
    RIGHT_OP (268) 56
    LE_OP (269) 60 64
    GE_OP (270) 61 65
    EQ_OP (271) 67 69
    NE_OP (272) 68 70
    AND_OP (273) 78
    OR_OP (274) 80
    MUL_ASSIGN (275) 90
    DIV_ASSIGN (276) 91
    MOD_ASSIGN (277) 92
    ADD_ASSIGN (278) 93
    SUB_ASSIGN (279) 94
    LEFT_ASSIGN (280) 95
    RIGHT_ASSIGN (281) 96
    AND_ASSIGN (282) 97
    XOR_ASSIGN (283) 98
    OR_ASSIGN (284) 99
    TYPEDEF_NAME (285) 144
    ENUMERATION_CONSTANT (286) 9
    TYPEDEF (287) 124
    EXTERN (288) 125
    STATIC (289) 126 197 198 200 237 238 239 245 246 248
    AUTO (290) 128
    REGISTER (291) 129
    INLINE (292) 187
    CONST (293) 183
    RESTRICT (294) 184
    VOLATILE (295) 185
    _BOOL (296) 139
    CHAR (297) 131
    SHORT (298) 132
    INT (299) 133
    LONG (300) 134
    SIGNED (301) 137
    UNSIGNED (302) 138
    FLOAT (303) 135
    DOUBLE (304) 136
    VOID (305) 130
    _COMPLEX (306) 140
    _IMAGINARY (307) 141
    STRUCT (308) 150
    UNION (309) 151
    ENUM (310) 169 170 171 172 173 174 175
    ELLIPSIS (311) 216 218
    CASE (312) 281
    DEFAULT (313) 17 282
    IF (314) 295 296 298 300
    ELSE (315) 295 300
    SWITCH (316) 297 299
    WHILE (317) 301 302 307
    DO (318) 302 307
    FOR (319) 303 304 305 306 308
    GOTO (320) 309
    CONTINUE (321) 310
    BREAK (322) 311
    RETURN (323) 312 313 314
    _ALIGNAS (324) 189 190
    _ALIGNOF (325) 37
    _ATOMIC (326) 186
    _GENERIC (327) 13
    _NORETURN (328) 188
    _STATIC_ASSERT (329) 273
    _THREAD_LOCAL (330) 127
    "then" (331)


Nonterminals, with rules where they appear

    $accept (101)
        on left: 0
    primary_expression (102)
        on left: 1 2 3 4 5 6
        on right: 18
    constant (103)
        on left: 7 8 9
        on right: 2
    enumeration_constant (104)
        on left: 10
        on right: 180 181
    string (105)
        on left: 11 12
        on right: 3
    _GENERIC_selection (106)
        on left: 13
        on right: 6
    _GENERIC_assoc_list (107)
        on left: 14 15
        on right: 13 15
    _GENERIC_association (108)
        on left: 16 17
        on right: 14 15
    postfix_expression (109)
        on left: 18 19 20 21 22 23 24 25 26 27
        on right: 19 20 21 22 23 24 25 31
    argument_expression_list (110)
        on left: 28 29 30
        on right: 21 29
    unary_expression (111)
        on left: 31 32 33 34 35 36 37
        on right: 32 33 35 44 87
    unary_operator (112)
        on left: 38 39 40 41 42 43
        on right: 34
    cast_expression (113)
        on left: 44 45
        on right: 34 45 46 47 48 49
    multiplicative_expression (114)
        on left: 46 47 48 49
        on right: 47 48 49 50 51 52 53
    additive_expression (115)
        on left: 50 51 52 53
        on right: 51 52 54 55 56
    shift_expression (116)
        on left: 54 55 56
        on right: 55 56 57 58 59 60 61 62 63 64 65
    relational_expression (117)
        on left: 57 58 59 60 61 62 63 64 65
        on right: 58 59 60 61 66 67 68 69 70
    equality_expression (118)
        on left: 66 67 68 69 70
        on right: 67 68 71 72
    and_expression (119)
        on left: 71 72
        on right: 72 73 74
    exclusive_or_expression (120)
        on left: 73 74
        on right: 74 75 76
    inclusive_or_expression (121)
        on left: 75 76
        on right: 76 77 78
    logical_and_expression (122)
        on left: 77 78
        on right: 78 79 80
    logical_or_expression (123)
        on left: 79 80
        on right: 80 81 82 84
    conditional_expression (124)
        on left: 81 82 83 84 85
        on right: 82 83 84 85 86 102
    assignment_expression (125)
        on left: 86 87 88
        on right: 13 16 17 28 29 87 100 101 197 198 200 201 203 237 238 239 240 242 245 246 247 248 250 262
    assignment_operator (126)
        on left: 89 90 91 92 93 94 95 96 97 98 99
        on right: 87
    expression (127)
        on left: 100 101
        on right: 4 19 82 85 101 293 295 296 297 301 302 304 306 307 313
    constant_expression (128)
        on left: 102
        on right: 165 166 168 180 182 190 271 273 281
    declaration (129)
        on left: 103 105 106 107
        on right: 290 305 306 318 325 326
    $@1 (130)
        on left: 104
        on right: 105
    declaration_specifiers (131)
        on left: 108 109 110 111 112 113 114 115 116 117
        on right: 103 105 107 108 110 112 114 116 222 223 224 319 320 321
    init_declarator_list (132)
        on left: 118 119 120
        on right: 105 119
    init_declarator (133)
        on left: 121 122 123
        on right: 118 119 120
    storage_class_specifier (134)
        on left: 124 125 126 127 128 129
        on right: 108 109
    type_specifier (135)
        on left: 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144
        on right: 110 111 158 159
    struct_or_union_specifier (136)
        on left: 145 146 147 148 149
        on right: 142
    struct_or_union (137)
        on left: 150 151
        on right: 145 146 147 148 149
    struct_declaration_list (138)
        on left: 152 153
        on right: 145 146 153
    struct_declaration (139)
        on left: 154 155 156 157
        on right: 152 153
    specifier_qualifier_list (140)
        on left: 158 159 160 161
        on right: 154 155 158 160 229 230
    struct_declarator_list (141)
        on left: 162 163 164
        on right: 155 163
    struct_declarator (142)
        on left: 165 166 167 168
        on right: 162 163 164
    enum_specifier (143)
        on left: 169 170 171 172 173 174 175
        on right: 143
    enumerator_list (144)
        on left: 176 177 178
        on right: 169 170 171 172 177
    enumerator (145)
        on left: 180 181 182
        on right: 176 177 178
    $@2 (146)
        on left: 179
        on right: 180
    type_qualifier (147)
        on left: 183 184 185 186
        on right: 112 113 160 161 214 215
    function_specifier (148)
        on left: 187 188
        on right: 114 115
    alignment_specifier (149)
        on left: 189 190
        on right: 116 117
    declarator (150)
        on left: 191 192
        on right: 121 122 166 167 194 222 225 319 320
    direct_declarator (151)
        on left: 193 194 195 196 197 198 199 200 201 202 203 204 205 206 207 208
        on right: 191 192 195 196 197 198 199 200 201 202 203 204 205 206 207
    pointer (152)
        on left: 209 210 211 212 213
        on right: 191 209 211 213 231 232
    type_qualifier_list (153)
        on left: 214 215
        on right: 197 199 200 201 202 209 210 215 237 239 240 241 245 247 248 249
    parameter_type_list (154)
        on left: 216 217 218
        on right: 204 252 254
    parameter_list (155)
        on left: 219 220 221
        on right: 216 217 220
    parameter_declaration (156)
        on left: 222 223 224 225 226
        on right: 219 220 221
    identifier_list (157)
        on left: 227 228
        on right: 206 228
    type_name (158)
        on left: 229 230
        on right: 16 26 27 36 37 45 189
    abstract_declarator (159)
        on left: 231 232 233
        on right: 223 226 229 234
    direct_abstract_declarator (160)
        on left: 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 251 252 253 254 255 256 257 258
        on right: 231 233 243 244 245 246 247 248 249 250 253 254 256 257
    initializer (161)
        on left: 259 260 261 262
        on right: 121 123 263 264 265 266 267
    initializer_list (162)
        on left: 263 264 265 266 267
        on right: 26 27 259 260 265 266
    designation (163)
        on left: 268
        on right: 263 265
    designator_list (164)
        on left: 269 270
        on right: 268 270
    designator (165)
        on left: 271 272
        on right: 269 270
    _STATIC_ASSERT_declaration (166)
        on left: 273
        on right: 106 156
    statement (167)
        on left: 274 275 276 277 278 279
        on right: 280 281 282 291 295 296 297 298 299 300 301 302 303 304 305 306 308
    labeled_statement (168)
        on left: 280 281 282
        on right: 274
    prepare_scope (169)
        on left: 283
        on right: 145 146 148 149 285 286 287 303 304 305 306 315
    finish_scope (170)
        on left: 284
        on right: 145 146 148 149 285 286 287 303 304 305 306 315
    compound_statement (171)
        on left: 285 286 287
        on right: 275 319 320 321 322 323 324
    block_item_list (172)
        on left: 288 289
        on right: 286 289
    block_item (173)
        on left: 290 291
        on right: 288 289
    expression_statement (174)
        on left: 292 293 294
        on right: 276 303 304 305 306
    selection_statement (175)
        on left: 295 296 297 298 299 300
        on right: 277
    iteration_statement (176)
        on left: 301 302 303 304 305 306 307 308
        on right: 278
    jump_statement (177)
        on left: 309 310 311 312 313 314
        on right: 279
    translation_unit (178)
        on left: 315 316
        on right: 0 316
    external_declaration (179)
        on left: 317 318
        on right: 315 316
    function_definition (180)
        on left: 319 320 321 322 323 324
        on right: 317
    declaration_list (181)
        on left: 325 326
        on right: 319 322 326


State 0

    0 $accept: • translation_unit $end

    $default  reduce using rule 283 (prepare_scope)

    prepare_scope     go to state 1
    translation_unit  go to state 2


State 1

  315 translation_unit: prepare_scope • external_declaration finish_scope

    error           shift, and go to state 3
    TYPEDEF_NAME    shift, and go to state 4
    TYPEDEF         shift, and go to state 5
    EXTERN          shift, and go to state 6
    STATIC          shift, and go to state 7
    AUTO            shift, and go to state 8
    REGISTER        shift, and go to state 9
    INLINE          shift, and go to state 10
    CONST           shift, and go to state 11
    RESTRICT        shift, and go to state 12
    VOLATILE        shift, and go to state 13
    _BOOL           shift, and go to state 14
    CHAR            shift, and go to state 15
    SHORT           shift, and go to state 16
    INT             shift, and go to state 17
    LONG            shift, and go to state 18
    SIGNED          shift, and go to state 19
    UNSIGNED        shift, and go to state 20
    FLOAT           shift, and go to state 21
    DOUBLE          shift, and go to state 22
    VOID            shift, and go to state 23
    _COMPLEX        shift, and go to state 24
    _IMAGINARY      shift, and go to state 25
    STRUCT          shift, and go to state 26
    UNION           shift, and go to state 27
    ENUM            shift, and go to state 28
    _ALIGNAS        shift, and go to state 29
    _ATOMIC         shift, and go to state 30
    _NORETURN       shift, and go to state 31
    _STATIC_ASSERT  shift, and go to state 32
    _THREAD_LOCAL   shift, and go to state 33

    declaration                 go to state 34
    declaration_specifiers      go to state 35
    storage_class_specifier     go to state 36
    type_specifier              go to state 37
    struct_or_union_specifier   go to state 38
    struct_or_union             go to state 39
    enum_specifier              go to state 40
    type_qualifier              go to state 41
    function_specifier          go to state 42
    alignment_specifier         go to state 43
    _STATIC_ASSERT_declaration  go to state 44
    external_declaration        go to state 45
    function_definition         go to state 46


State 2

    0 $accept: translation_unit • $end
  316 translation_unit: translation_unit • external_declaration

    $end            shift, and go to state 47
    error           shift, and go to state 3
    TYPEDEF_NAME    shift, and go to state 4
    TYPEDEF         shift, and go to state 5
    EXTERN          shift, and go to state 6
    STATIC          shift, and go to state 7
    AUTO            shift, and go to state 8
    REGISTER        shift, and go to state 9
    INLINE          shift, and go to state 10
    CONST           shift, and go to state 11
    RESTRICT        shift, and go to state 12
    VOLATILE        shift, and go to state 13
    _BOOL           shift, and go to state 14
    CHAR            shift, and go to state 15
    SHORT           shift, and go to state 16
    INT             shift, and go to state 17
    LONG            shift, and go to state 18
    SIGNED          shift, and go to state 19
    UNSIGNED        shift, and go to state 20
    FLOAT           shift, and go to state 21
    DOUBLE          shift, and go to state 22
    VOID            shift, and go to state 23
    _COMPLEX        shift, and go to state 24
    _IMAGINARY      shift, and go to state 25
    STRUCT          shift, and go to state 26
    UNION           shift, and go to state 27
    ENUM            shift, and go to state 28
    _ALIGNAS        shift, and go to state 29
    _ATOMIC         shift, and go to state 30
    _NORETURN       shift, and go to state 31
    _STATIC_ASSERT  shift, and go to state 32
    _THREAD_LOCAL   shift, and go to state 33

    declaration                 go to state 34
    declaration_specifiers      go to state 35
    storage_class_specifier     go to state 36
    type_specifier              go to state 37
    struct_or_union_specifier   go to state 38
    struct_or_union             go to state 39
    enum_specifier              go to state 40
    type_qualifier              go to state 41
    function_specifier          go to state 42
    alignment_specifier         go to state 43
    _STATIC_ASSERT_declaration  go to state 44
    external_declaration        go to state 48
    function_definition         go to state 46


State 3

  322 function_definition: error • declaration_list compound_statement
  323                    | error • error compound_statement
  324                    | error • compound_statement

    error           shift, and go to state 49
    TYPEDEF_NAME    shift, and go to state 4
    TYPEDEF         shift, and go to state 5
    EXTERN          shift, and go to state 6
    STATIC          shift, and go to state 7
    AUTO            shift, and go to state 8
    REGISTER        shift, and go to state 9
    INLINE          shift, and go to state 10
    CONST           shift, and go to state 11
    RESTRICT        shift, and go to state 12
    VOLATILE        shift, and go to state 13
    _BOOL           shift, and go to state 14
    CHAR            shift, and go to state 15
    SHORT           shift, and go to state 16
    INT             shift, and go to state 17
    LONG            shift, and go to state 18
    SIGNED          shift, and go to state 19
    UNSIGNED        shift, and go to state 20
    FLOAT           shift, and go to state 21
    DOUBLE          shift, and go to state 22
    VOID            shift, and go to state 23
    _COMPLEX        shift, and go to state 24
    _IMAGINARY      shift, and go to state 25
    STRUCT          shift, and go to state 26
    UNION           shift, and go to state 27
    ENUM            shift, and go to state 28
    _ALIGNAS        shift, and go to state 29
    _ATOMIC         shift, and go to state 30
    _NORETURN       shift, and go to state 31
    _STATIC_ASSERT  shift, and go to state 32
    _THREAD_LOCAL   shift, and go to state 33

    '{'  reduce using rule 283 (prepare_scope)

    declaration                 go to state 50
    declaration_specifiers      go to state 51
    storage_class_specifier     go to state 36
    type_specifier              go to state 37
    struct_or_union_specifier   go to state 38
    struct_or_union             go to state 39
    enum_specifier              go to state 40
    type_qualifier              go to state 41
    function_specifier          go to state 42
    alignment_specifier         go to state 43
    _STATIC_ASSERT_declaration  go to state 44
    prepare_scope               go to state 52
    compound_statement          go to state 53
    declaration_list            go to state 54


State 4

  144 type_specifier: TYPEDEF_NAME •

    $default  reduce using rule 144 (type_specifier)


State 5

  124 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 124 (storage_class_specifier)


State 6

  125 storage_class_specifier: EXTERN •

    $default  reduce using rule 125 (storage_class_specifier)


State 7

  126 storage_class_specifier: STATIC •

    $default  reduce using rule 126 (storage_class_specifier)


State 8

  128 storage_class_specifier: AUTO •

    $default  reduce using rule 128 (storage_class_specifier)


State 9

  129 storage_class_specifier: REGISTER •

    $default  reduce using rule 129 (storage_class_specifier)


State 10

  187 function_specifier: INLINE •

    $default  reduce using rule 187 (function_specifier)


State 11

  183 type_qualifier: CONST •

    $default  reduce using rule 183 (type_qualifier)


State 12

  184 type_qualifier: RESTRICT •

    $default  reduce using rule 184 (type_qualifier)


State 13

  185 type_qualifier: VOLATILE •

    $default  reduce using rule 185 (type_qualifier)


State 14

  139 type_specifier: _BOOL •

    $default  reduce using rule 139 (type_specifier)


State 15

  131 type_specifier: CHAR •

    $default  reduce using rule 131 (type_specifier)


State 16

  132 type_specifier: SHORT •

    $default  reduce using rule 132 (type_specifier)


State 17

  133 type_specifier: INT •

    $default  reduce using rule 133 (type_specifier)


State 18

  134 type_specifier: LONG •

    $default  reduce using rule 134 (type_specifier)


State 19

  137 type_specifier: SIGNED •

    $default  reduce using rule 137 (type_specifier)


State 20

  138 type_specifier: UNSIGNED •

    $default  reduce using rule 138 (type_specifier)


State 21

  135 type_specifier: FLOAT •

    $default  reduce using rule 135 (type_specifier)


State 22

  136 type_specifier: DOUBLE •

    $default  reduce using rule 136 (type_specifier)


State 23

  130 type_specifier: VOID •

    $default  reduce using rule 130 (type_specifier)


State 24

  140 type_specifier: _COMPLEX •

    $default  reduce using rule 140 (type_specifier)


State 25

  141 type_specifier: _IMAGINARY •

    $default  reduce using rule 141 (type_specifier)


State 26
